--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab+Highlight:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <div class="logo-container">
-            <a href="#intro" class="logo">HH</a>
+        <div class="nav-container">
+            <div class="logo-container">
+                <a href="#intro" class="logo">HH</a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#intro">Home</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#aboutMe">About Me</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#intro">Home</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#aboutMe">About Me</a></li>
-            </ul>
-        </nav>
     </header>
 
     <main>
@@ -42,27 +45,30 @@
                 <div class="project-box">
                     <div class="project-1">
                         <img src="./media/blog.png" alt="">
-                        <div class="text-container-left">
+                        <div class="text-container">
                         <h3>Blog project</h3>
                         <p>something is going to be written here. makes me sound smart...</p>
+                        <a href="https://norofffeu.github.io/FED1-PE1-Hermanhyl/" class="visit-page-btn">Visit Page</a>
                         </div>
                     </div>
                 </div>
                 <div class="project-box">
                     <div class="project-2">
-                        <div class="text-container-left">
+                        <div class="text-container">
                             <h3>Website for a museum</h3>
                             <p>something is going to be written here. makes me sound smart...</p>
+                            <a href="https://hermanhyl.github.io/Semester-Project/" class="visit-page-btn">Visit Page</a>
                         </div>
                         <img src="./media/Skjermbilde 2024-06-04 133215.png" alt="SCM museum index page">
                     </div>
                 </div>
                 <div class="project-box">
                     <div class="project-3">
-                        <img src="" alt="">
-                        <div class="text-container-left">
+                        <img src="./media/game hub.png" alt="Front page of online gamestore project">
+                        <div class="text-container">
                             <h3>Game store website</h3>
-                            <p>something is going to be written here. makes me sound smart...</p>
+                            <p>something is going to be written here. makes me sound smart... blir den lenger hvis jeg skriver mer?</p>
+                            <a href="https://hermanhyl.github.io/GameHub-CA-Project/" class="visit-page-btn">Visit Page</a>
                             </div>
                     </div>
                 </div>
@@ -73,8 +79,27 @@
                     <div class="aboutMe">
                         <img src="./media/387072153_6744627072263500_5838986628391462047_n.jpg" alt="">
                         <h3>About Me</h3>
-                        <p>Bio goes here</p>
-                        <button>Read More?</button>
+                        <p>I am currently developing a portfolio website as I pursue my passion for front-end 
+                            development. At the end of my first year in a two-year program, 
+                            I have been immersed in learning web design, HTML, CSS, and JavaScript. 
+                            This journey has allowed me to build a solid foundation and gain confidence 
+                            in these core areas.
+                        </p>
+
+                        <p> On a personal note, I am a calm individual who enjoys a wide range of activities, 
+                            from gaming to spending time outdoors fishing. I also have a strong passion for digital 
+                            painting, which complements my interest in front-end development by allowing me to explore 
+                            creativity in different mediums. While I consider myself social, I am not the most outgoing person. 
+                            However, I am passionate about what I do and have a genuine interest in front-end development. <br>
+                        </p>
+
+                        <p> My goal is to leverage this knowledge to secure a full-time position 
+                            as a front-end developer. Additionally, I am excited to start side projects
+                            that will further enhance my skills and showcase my creativity. 
+                            Through these experiences, I aim to contribute to innovative web 
+                            solutions and grow continuously in this dynamic field.
+                        </p>
+                        <a href="https://www.linkedin.com/in/herman-hylland/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                 </div>
             </section>
