added icons and favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab+Highlight:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="icon" href="">
+    <link rel="icon" type="image/x-icon" href="./media/logo-hh.png">
     <title>Document</title>
 </head>
 <body>
@@ -49,7 +49,8 @@
                         <div class="text-container">
                         <h3>Blog project</h3>
                         <p>something is going to be written here. makes me sound smart...</p>
-                        <a href="https://norofffeu.github.io/FED1-PE1-Hermanhyl/" class="visit-page-btn">Visit Page</a>
+                        <a href="https://norofffeu.github.io/FED1-PE1-Hermanhyl/" class="visit-page-btn">Visit Website</a>
+                        <a href="https://github.com/NoroffFEU/FED1-PE1-Hermanhyl" class="visit-page-btn">Visit GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -58,7 +59,8 @@
                         <div class="text-container">
                             <h3>Website for a museum</h3>
                             <p>something is going to be written here. makes me sound smart...</p>
-                            <a href="https://hermanhyl.github.io/Semester-Project/" class="visit-page-btn">Visit Page</a>
+                            <a href="https://hermanhyl.github.io/Semester-Project/" class="visit-page-btn">Visit Website</a>
+                            <a href="https://github.com/Hermanhyl/Semester-Project" class="visit-page-btn">Visit GitHub</a>
                         </div>
                         <img src="./media/Skjermbilde 2024-06-04 133215.png" alt="SCM museum index page">
                     </div>
@@ -67,9 +69,10 @@
                     <div class="project-3">
                         <img src="./media/game hub.png" alt="Front page of online gamestore project">
                         <div class="text-container">
-                            <h3>Game store website</h3>
-                            <p>something is going to be written here. makes me sound smart... blir den lenger hvis jeg skriver mer?</p>
-                            <a href="https://hermanhyl.github.io/GameHub-CA-Project/" class="visit-page-btn">Visit Page</a>
+                            <h3>Game Hub website store</h3>
+                            <p>My first assignment was the creation of Game Hub, an online web store for buying and selling games. This project was an application of the principles we learned in design, HTML, and CSS. </p>
+                            <a href="https://hermanhyl.github.io/GameHub-CA-Project/" class="visit-page-btn">Visit Website</a>
+                            <a href="https://github.com/Hermanhyl/GameHub-CA-Project" class="visit-page-btn">Visit GitHub</a>
                             </div>
                     </div>
                 </div>
@@ -100,7 +103,10 @@
                             Through these experiences, I aim to contribute to innovative web 
                             solutions and grow continuously in this dynamic field.
                         </p>
-                        <a href="https://www.linkedin.com/in/herman-hylland/"><i class="fa-brands fa-linkedin"></i></a>
+                        <div class="icons-container">
+                            <a href="https://www.linkedin.com/in/herman-hylland/"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://github.com/Hermanhyl"><i class="fa-brands fa-square-github"></i></a>
+                        </div>
                     </div>
                 </div>
             </section>
