--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                         <img src="./media/blog.png" alt="">
                         <div class="text-container">
                         <h3>Blog project</h3>
-                        <p>something is going to be written here. makes me sound smart...</p>
+                        <p>As part of our first-year exam project, we were tasked with creating a blog page using API integration. The required methods included CREATE, GET, EDIT, PUT, and DELETE. This project involved the use of HTML, CSS, JavaScript, Figma, and Visual Studio Code.</p>
+                        <p>We had the freedom to choose our own fictional client, and I chose my dog, Bilbo, as my client. This personal touch made the project especially enjoyable, as I was able to incorporate my own photos of Bilbo.</p>
+                            
                         <a href="https://norofffeu.github.io/FED1-PE1-Hermanhyl/" class="visit-page-btn">Visit Website</a>
                         <a href="https://github.com/NoroffFEU/FED1-PE1-Hermanhyl" class="visit-page-btn">Visit GitHub</a>
                         </div>
@@ -57,8 +59,10 @@
                 <div class="project-box">
                     <div class="project-2">
                         <div class="text-container">
-                            <h3>Website for a museum</h3>
-                            <p>something is going to be written here. makes me sound smart...</p>
+                            <h3>Community Science Museum Website</h3>
+                            <p>Develop and implement a modern, accessible, and responsive web presence for the client, utilizing the provided image and text content.</p>
+                                
+                            <p>The website should engage a younger audience without resorting to overly childish themes, maintaining a balance that excites and entices visitors to the museum without being patronizing.</p>
                             <a href="https://hermanhyl.github.io/Semester-Project/" class="visit-page-btn">Visit Website</a>
                             <a href="https://github.com/Hermanhyl/Semester-Project" class="visit-page-btn">Visit GitHub</a>
                         </div>
@@ -115,8 +119,7 @@
     <footer>
             <div>
                 <ul>
-                    <li>
-                    </li>
+                    <li></li>
                 </ul>
             </div>
     </footer>
